<resources>
    <string name="app_name">StudentSE</string>
    <string name="jobs">Jobs</string>
    <string name="internships">Internships</string>
    <string name="research">Research</string>
    <string name="events">Events</string>
    <string name="org">Student Organizations</string>
    <string name="acm">ACM</string>
    <string name="cs">CS Club</string>
    <string name="cdc">CDC</string>
    <string name="opportunities">Opportunities</string>
    <string name="chat">chat</string>
    <string name="web">web</string>
    <string name="orgName">org name</string>
    <string name="about">about</string>
    <string name="connect_error">Unable to connect</string>

    <string name="read_error">Unable to read JSON data</string>

    <string name="invalid_url">Invalid URL</string>
</resources>