<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.student.studentse.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical|center"
        android:background="@color/colorPrimaryDark"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:text="@string/opportunities"
        android:textColor="@color/colorLight"
        android:textSize="30sp"
        android:typeface="serif"
        tools:text="@string/opportunities" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnJobs"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/jobs"
            android:textColor="@color/colorLight"
            tools:text="@string/jobs" />

        <Button
            android:id="@+id/btnResearch"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/research"
            android:textColor="@color/colorLight"
            tools:text="@string/research" />

        <Button
            android:id="@+id/btnInternships"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/internships"
            android:textColor="@color/colorLight"
            tools:text="@string/internships" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/events"
            android:textColor="@color/colorLight"
            android:textSize="30sp"
            android:typeface="serif"
            tools:text="@string/events" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEvents"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/events"
            android:textColor="@color/colorLight"
            tools:text="@string/events" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/org"
            android:textColor="@color/colorLight"
            android:textSize="30sp"
            android:typeface="serif"
            tools:text="@string/org" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnACM"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/acm"
            android:textColor="@color/colorLight" />

        <Button
            android:id="@+id/btnCS"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/cs"
            android:textColor="@color/colorLight" />

        <Button
            android:id="@+id/btnCDC"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/cdc"
            android:textColor="@color/colorLight" />

    </LinearLayout>

</LinearLayout>