<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.student.studentse.MainActivityFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:background="@color/colorPrimaryDark"
        android:capitalize="characters"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:text="@string/orgName"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:typeface="serif"
        tools:text="@string/orgName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:typeface="serif"
            tools:text="@string/about" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="wrap_content"
            android:layout_height="167dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/web"
            android:textColor="@color/colorLight"
            tools:text="@string/web" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="167dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/chat"
            android:textColor="@color/colorLight"
            tools:text="@string/chat" />

    </LinearLayout>

</LinearLayout>